--liquibase formatted sql

--changeset student:001_create_reference_tables
CREATE TABLE IF NOT EXISTS region (
    region_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR
);

CREATE TABLE IF NOT EXISTS product_category (
    product_category_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR
);

CREATE TABLE IF NOT EXISTS product_subcategory (
    product_subcategory_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    product_category_id INTEGER,
    name VARCHAR,
    CONSTRAINT fk_product_subcategory_category
        FOREIGN KEY (product_category_id)
        REFERENCES product_category(product_category_id)
);

CREATE TABLE IF NOT EXISTS delivery_method (
    delivery_method_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR,
    description TEXT
);

--rollback DROP TABLE IF EXISTS product_subcategory;
--rollback DROP TABLE IF EXISTS delivery_method;
--rollback DROP TABLE IF EXISTS product_category;
--rollback DROP TABLE IF EXISTS region;