--liquibase formatted sql

--changeset student:002_create_users_related
CREATE TABLE IF NOT EXISTS users (
    user_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    login VARCHAR,
    email VARCHAR,
    phone VARCHAR,
    password VARCHAR
);

CREATE TABLE IF NOT EXISTS address (
    address_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id INTEGER,
    country VARCHAR,
    region_id INTEGER,
    city VARCHAR,
    house_number VARCHAR,
    apartment_number INTEGER,
    CONSTRAINT fk_address_user
        FOREIGN KEY (user_id)
        REFERENCES users(user_id),
    CONSTRAINT fk_address_region
        FOREIGN KEY (region_id)
        REFERENCES region(region_id)
);

CREATE TABLE IF NOT EXISTS payment_card (
    payment_card_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id INTEGER,
    card_number VARCHAR,
    expiration_date VARCHAR,
    CONSTRAINT fk_payment_card_user
        FOREIGN KEY (user_id)
        REFERENCES users(user_id)
);

CREATE TABLE IF NOT EXISTS seller (
    seller_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id INTEGER,
    CONSTRAINT fk_seller_user
        FOREIGN KEY (user_id)
        REFERENCES users(user_id)
);

--rollback DROP TABLE IF EXISTS seller;
--rollback DROP TABLE IF EXISTS payment_card;
--rollback DROP TABLE IF EXISTS address;
--rollback DROP TABLE IF EXISTS users;