--liquibase formatted sql

--changeset student:003_create_catalog
CREATE TABLE IF NOT EXISTS product (
    product_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    product_subcategory_id INTEGER,
    name VARCHAR,
    description TEXT,
    color VARCHAR,
    country_origin VARCHAR,
    CONSTRAINT fk_product_subcategory
        FOREIGN KEY (product_subcategory_id)
        REFERENCES product_subcategory(product_subcategory_id)
);

CREATE TABLE IF NOT EXISTS product_detail (
    product_detail_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    product_id INTEGER,
    quantity INTEGER,
    seller_id INTEGER,
    price NUMERIC(12, 2),
    CONSTRAINT fk_product_detail_product
        FOREIGN KEY (product_id)
        REFERENCES product(product_id),
    CONSTRAINT fk_product_detail_seller
        FOREIGN KEY (seller_id)
        REFERENCES seller(seller_id)
);

CREATE TABLE IF NOT EXISTS product_price_history (
    product_price_history_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    product_detail_id INTEGER,
    price NUMERIC(12, 2),
    change_date TIMESTAMP,
    CONSTRAINT fk_product_price_history_detail
        FOREIGN KEY (product_detail_id)
        REFERENCES product_detail(product_detail_id)
);

--rollback DROP TABLE IF EXISTS product_price_history;
--rollback DROP TABLE IF EXISTS product_detail;
--rollback DROP TABLE IF EXISTS product;
