--liquibase formatted sql

--changeset student:004_create_ordering
CREATE TABLE IF NOT EXISTS delivery_tariff (
    delivery_tariff_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    delivery_method_id INTEGER,
    region_id INTEGER,
    price NUMERIC(12, 2),
    estimated_days INTEGER,
    CONSTRAINT fk_delivery_tariff_method
        FOREIGN KEY (delivery_method_id)
        REFERENCES delivery_method(delivery_method_id),
    CONSTRAINT fk_delivery_tariff_region
        FOREIGN KEY (region_id)
        REFERENCES region(region_id)
);

CREATE TABLE IF NOT EXISTS order_header (
    order_header_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id INTEGER,
    address_id INTEGER,
    payment_card_id INTEGER,
    delivery_tariff_id INTEGER,
    order_date TIMESTAMP,
    total_amount NUMERIC(12, 2),
    delivery_cost NUMERIC(12, 2),
    CONSTRAINT fk_order_header_user
        FOREIGN KEY (user_id)
        REFERENCES users(user_id),
    CONSTRAINT fk_order_header_address
        FOREIGN KEY (address_id)
        REFERENCES address(address_id),
    CONSTRAINT fk_order_header_payment_card
        FOREIGN KEY (payment_card_id)
        REFERENCES payment_card(payment_card_id),
    CONSTRAINT fk_order_header_delivery_tariff
        FOREIGN KEY (delivery_tariff_id)
        REFERENCES delivery_tariff(delivery_tariff_id)
);

CREATE TABLE IF NOT EXISTS order_detail (
    order_detail_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    order_header_id INTEGER,
    product_detail_id INTEGER,
    quantity INTEGER,
    CONSTRAINT fk_order_detail_header
        FOREIGN KEY (order_header_id)
        REFERENCES order_header(order_header_id),
    CONSTRAINT fk_order_detail_product_detail
        FOREIGN KEY (product_detail_id)
        REFERENCES product_detail(product_detail_id)
);

CREATE TABLE IF NOT EXISTS favorites (
    favorite_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id INTEGER,
    product_id INTEGER,
    CONSTRAINT fk_favorites_user
        FOREIGN KEY (user_id)
        REFERENCES users(user_id),
    CONSTRAINT fk_favorites_product
        FOREIGN KEY (product_id)
        REFERENCES product(product_id)
);

CREATE TABLE IF NOT EXISTS cart_items (
    cart_item_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id INTEGER,
    product_detail_id INTEGER,
    quantity INTEGER,
    CONSTRAINT fk_cart_items_user
        FOREIGN KEY (user_id)
        REFERENCES users(user_id),
    CONSTRAINT fk_cart_items_product_detail
        FOREIGN KEY (product_detail_id)
        REFERENCES product_detail(product_detail_id)
);

--rollback DROP TABLE IF EXISTS cart_items;
--rollback DROP TABLE IF EXISTS favorites;
--rollback DROP TABLE IF EXISTS order_detail;
--rollback DROP TABLE IF EXISTS order_header;
--rollback DROP TABLE IF EXISTS delivery_tariff;