--liquibase formatted sql

--changeset student:005_create_reviews
CREATE TABLE IF NOT EXISTS review_sellers (
    review_seller_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id INTEGER,
    seller_id INTEGER,
    rating INTEGER,
    comment TEXT,
    create_date TIMESTAMP,
    CONSTRAINT fk_review_sellers_user
        FOREIGN KEY (user_id)
        REFERENCES users(user_id),
    CONSTRAINT fk_review_sellers_seller
        FOREIGN KEY (seller_id)
        REFERENCES seller(seller_id)
);

CREATE TABLE IF NOT EXISTS review_products (
    review_product_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id INTEGER,
    product_detail_id INTEGER,
    rating INTEGER,
    comment TEXT,
    create_date TIMESTAMP,
    CONSTRAINT fk_review_products_user
        FOREIGN KEY (user_id)
        REFERENCES users(user_id),
    CONSTRAINT fk_review_products_product_detail
        FOREIGN KEY (product_detail_id)
        REFERENCES product_detail(product_detail_id)
);

--rollback DROP TABLE IF EXISTS review_products;
--rollback DROP TABLE IF EXISTS review_sellers;