Table users {
  user_id integer [primary key]
  login varchar
  email varchar
  phone varchar
  password varchar
}

Table address {
  address_id integer [primary key]
  user_id integer
  country varchar
  region_id integer
  city varchar
  house_number varchar
  apartment_number integer
}

Table region {
  region_id integer [primary key]
  name varchar
}

Table product {
  product_id integer [primary key]
  product_subcategory_id integer
  name varchar
  description text
  color varchar
  country_origin varchar
}

Table product_detail {
  product_detail_id integer [primary key]
  product_id integer
  quantity integer
  seller_id integer
  price decimal
}

Table product_subcategory {
  product_subcategory_id integer [primary key]
  product_category_id integer
  name varchar
}

Table product_category {
  product_category_id integer [primary key]
  name varchar
}

Table payment_card {
  payment_card_id integer [primary key]
  user_id integer
  card_number varchar
  expiration_date varchar
}

Table seller {
  seller_id integer [primary key]
  user_id integer
}

Table review_sellers {
  review_seller_id integer [primary key]
  user_id integer
  seller_id integer
  rating integer
  comment text
  create_date datetime
}

Table order_header {
  order_header_id integer [primary key]
  user_id integer
  address_id integer
  payment_card_id integer
  delivery_tariff_id integer
  order_date datetime
  total_amount decimal
  delivery_cost decimal

}

Table order_detail {
  order_detail_id integer [primary key]
  order_header_id integer
  product_detail_id integer
  quantity integer
}

Table favorites {
  favorite_id integer [primary key]
  user_id integer
  product_id integer
}

Table cart_items {
  cart_item_id integer [primary key]
  user_id integer
  product_detail_id integer
  quantity integer
}

Table review_products {
  review_product_id integer [primary key]
  user_id integer
  product_detail_id integer
  rating integer
  comment text
  create_date datetime
}

Table product_price_history {
  product_price_history_id integer [primary key]
  product_detail_id integer
  price decimal
  change_date datetime
}

Table delivery_method {
  delivery_method_id integer [primary key]
  name varchar
  description text
}

Table delivery_tariff {
  delivery_tariff_id integer [primary key]
  delivery_method_id integer
  region_id integer
  price decimal
  estimated_days integer
}

Ref: address.region_id > region.region_id
Ref: delivery_tariff.region_id > region.region_id

Ref: address.user_id > users.user_id

Ref: product.product_subcategory_id > product_subcategory.product_subcategory_id
Ref: product_subcategory.product_category_id > product_category.product_category_id

Ref: payment_card.user_id > users.user_id

Ref: seller.user_id > users.user_id

Ref: product_detail.product_id > product.product_id
Ref: product_detail.seller_id > seller.seller_id

Ref: review_sellers.user_id > users.user_id
Ref: review_sellers.seller_id > seller.seller_id

Ref: order_header.user_id > users.user_id
Ref: order_header.address_id > address.address_id
Ref: order_header.payment_card_id > payment_card.payment_card_id

Ref: order_detail.order_header_id > order_header.order_header_id
Ref: order_detail.product_detail_id > product_detail.product_detail_id

Ref: favorites.user_id > users.user_id
Ref: favorites.product_id > product.product_id

Ref: cart_items.user_id > users.user_id
Ref: cart_items.product_detail_id > product_detail.product_detail_id

Ref: review_products.user_id > users.user_id
Ref: review_products.product_detail_id > product_detail.product_detail_id

Ref: product_price_history.product_detail_id > product_detail.product_detail_id

Ref: delivery_tariff.delivery_method_id > delivery_method.delivery_method_id

Ref: order_header.delivery_tariff_id > delivery_tariff.delivery_tariff_id